--- a/index.html
+++ b/index.html
@@ -313,9 +313,78 @@
             </div>
         </div>
     </section>
-
-
-
+    <section id="rent">
+        <div class="container slider_block">
+            <div class="title">
+                <h2>Аренда</h2>
+                <h3>Самые популярные объявления в разделе об аренде</h3>
+            </div>
+            <form action="" class="build_type">
+                <input name='build_type' type="radio" id='radio_office' checked>
+                <label for="radio_office">Офис</label>
+                <input name='build_type' type="radio" id='radio_stock'>
+                <label for="radio_stock">Склад</label>
+                <input name='build_type' type="radio" id='radio_seller'>
+                <label for="radio_seller">Торговые</label>
+                <input name='build_type' type="radio" id='radio_factory'>
+                <label for="radio_factory">Производство</label>
+                <input name='build_type' type="radio" id='radio_land'>
+                <label for="radio_land">Земля</label>
+                <input name='build_type' type="radio" id='radio_coworking'>
+                <label for="radio_coworking">Коворкинг</label>
+                <input name='build_type' type="radio" id='radio_confernce'>
+                <label for="radio_confernce">Конференц-зал</label>
+                <input name='build_type' type="radio" id='radio_talking_room'>
+                <label for="radio_talking_room">Переговорные</label>
+                <input name='build_type' type="radio" id='radio_loft'>   
+                <label for="radio_loft">Лофт</label>
+            </form>
+            <div class="builds row no-gutters">
+                <div class="col-3">
+                    <a href='#rent'>
+                        <div class="build_block">
+                            <img src="src/img/build_block_promo.jpg" class="photo" alt="">
+                            <div class="info">
+                                <div class="main">
+                                    <div class="price">
+                                        <p>55 000 Р</p>
+                                        <span>1100 Р/м²</span>
+                                    </div>
+                                    <div class="build_location">
+                                        <p>59  м², 3 этаж, </p>
+                                        <a href="#advertisements" id="build_bc">БЦ "Сенатор"</a>
+                                    </div>
+                                </div>  
+                                <hr>
+                                <div class="address">
+                                    <p>Большой проспект П.С., д. 29, корпус тотакто</p>
+                                    <div class="metro">
+                                        <div class="station">
+                                            <div class="icon red">
+                                                <h5 class="name">Петроградская</h5>
+                                                <span class="distance">(20 минут пешком)</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="stock_builds">
+                <div class="radio_office"></div>
+                <div class="radio_stock"></div>
+                <div class="radio_seller"></div>
+                <div class="radio_factory"></div>
+                <div class="radio_land"></div>
+                <div class="radio_coworking"></div>
+                <div class="radio_confernce"></div>
+                <div class="radio_talking_room"></div>
+                <div class="radio_loft"></div>
+            </div>
+        </div>
+    </section>
     <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
