--- a/index.html
+++ b/index.html
@@ -339,49 +339,46 @@
                 <input name='build_type' type="radio" id='radio_loft'>   
                 <label for="radio_loft">Лофт</label>
             </form>
-            <div class="builds row no-gutters">
-                <div class="col-3">
-                    <a href='#rent'>
-                        <div class="build_block">
+            <div class="builds row no-gutters" id="builds_rent">
+                <div class="col-3 box">
+                    <div class="build_block" id="build_block_1">
+                        <div class="photos">
                             <img src="src/img/build_block_promo.jpg" class="photo" alt="">
-                            <div class="info">
-                                <div class="main">
-                                    <div class="price">
-                                        <p>55 000 Р</p>
-                                        <span>1100 Р/м²</span>
+                        </div>
+                        <div class="info">
+                            <div class="main">
+                                <div class="price">
+                                    <p>55 000 Р</p>
+                                    <span>1100 Р/м²</span>
+                                </div>
+                                <div class="build_location">
+                                    <p>59  м², 3 этаж, </p>
+                                    <a href="#advertisements" id="build_bc">БЦ "Сенатор"</a>
+                                </div>
+                            </div>  
+                            <hr>
+                            <div class="address">
+                                <p>Большой проспект П.С., д. 29, корпус тотакто</p>
+                                <div class="metro">
+                                    <div class="station">
+                                        <div class="icon red"></div>
+                                        <div class="station_info">
+                                            <h5 class="name">Площадь Восстания</h5>
+                                            <span class="distance">(20 минут пешком)</span>
+                                        </div>
                                     </div>
-                                    <div class="build_location">
-                                        <p>59  м², 3 этаж, </p>
-                                        <a href="#advertisements" id="build_bc">БЦ "Сенатор"</a>
-                                    </div>
-                                </div>  
-                                <hr>
-                                <div class="address">
-                                    <p>Большой проспект П.С., д. 29, корпус тотакто</p>
-                                    <div class="metro">
-                                        <div class="station">
-                                            <div class="icon red">
-                                                <h5 class="name">Петроградская</h5>
-                                                <span class="distance">(20 минут пешком)</span>
-                                            </div>
+                                    <div class="station">
+                                        <div class="icon purple"></div>
+                                        <div class="station_info">
+                                            <h5 class="name">Чкаловская</h5>
+                                            <span class="distance">(20 минут пешком)</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-            </div>
-            <div class="stock_builds">
-                <div class="radio_office"></div>
-                <div class="radio_stock"></div>
-                <div class="radio_seller"></div>
-                <div class="radio_factory"></div>
-                <div class="radio_land"></div>
-                <div class="radio_coworking"></div>
-                <div class="radio_confernce"></div>
-                <div class="radio_talking_room"></div>
-                <div class="radio_loft"></div>
             </div>
         </div>
     </section>
