--- a/index.html
+++ b/index.html
@@ -433,6 +433,21 @@
             <a href="#rent" class='show_all-button'>Все предложения</a>
         </div>
     </section>
+    <section id="commercial_land">
+        <div class="commercial_land">
+            <img src="src/img/commercial_land_promo.jpg" alt="" class="bg">
+            <div class="content">
+                <div class="info">
+                    <h2>Земля коммерческого назначения</h2>
+                    <h5>Коттеджные поселки, дома, дачи, коттеджи, таунхаусы - весь спектр предложений рынка загородной недвижимости Санкт-Петербурга и Ленинградской области.</h5>
+                </div>
+                <div class="buttons">
+                    <a href="#commercial_land">Купить</a>
+                    <a href="#commercial_land">Арендовать</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
