Added steps section

--- a/index.html
+++ b/index.html
@@ -448,6 +448,30 @@
             </div>
         </div>
     </section>
+    <section id="steps">
+        <div class="container">
+            <div class="steps">
+                <h2 class="title">Как это работает?</h2>
+                <div class="steps_blocks">
+                    <div class="steps_block">
+                        <img src="src/img/choose_icon.png" alt="" class="steps_block_icon">
+                        <h4 class="steps_block_title">Выбирайте</h4>
+                        <p class="steps_block_text">Выберите помещение для своего бизнеса и отправьте заявку собственнику</p>
+                    </div>
+                    <div class="steps_block">
+                        <img src="src/img/look_icon.png" alt="" class="steps_block_icon">
+                        <h4 class="steps_block_title">Смотрите</h4>
+                        <p class="steps_block_text">Получите подтверждение, что вас ждут, и приезжайте на просмотр. Пока вы едете, помещение будет забронировано за вами, его никому не отдадут.</p>
+                    </div>
+                    <div class="steps_block">
+                        <img src="src/img/wallet_icon.png" alt="" class="steps_block_icon">
+                        <h4 class="steps_block_title">Оплачивайте</h4>
+                        <p class="steps_block_text">Если вам понравилось — оплачиваете аренду. Если не понравилось — вы никому ничего не должны. Просто найдите другое подходящее помещение.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
